name:                find-leak
version:             0.1-test
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

executable find-leak
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT -DGHCJS_BROWSER
      ghc-options:   -Wall -threaded
      ghcjs-options: -debug
  else
      cpp-options:   -DGHCJS_BROWSER
      ghc-options:        -O2 -rtsopts -with-rtsopts=-N -Wall
      ghcjs-options:       -dedupe
  main-is:            Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:      base >=4.8 && <4.10
                    , aeson
                    , reflex
                    , containers
                    , safe
                    , text
                    , lens
                    , ghcjs-dom
                    -- for gonimo-common:
                    , aeson
                    , attoparsec
                    , base64-bytestring
                    , bytestring >= 0.10.6.0
                    , containers
                    , persistent-template
                    , text
                    , time
                    , vector
                    , persistent
                    , errors
                    , http-api-data
                    , data-default
                    , reflex-dom-core
                    , jsaddle-warp
                    , jsaddle
                    